{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 17,
  "lineage": "f0a8a71d-d73b-cef2-95ba-5a0669cb82c4",
  "resources": [
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkInterfaces/dev301_nic0",
            "internal_domain_name_suffix": "ddfx1ik1hdxetnfjwp4n4wjtjf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_configuration_0_nicc",
                "primary": true,
                "private_ip_address": "192.168.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/publicIPAddresses/dev301_pub_ip0",
                "subnet_id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/virtualNetworks/dev301_vpc/subnets/dev301_subnet"
              }
            ],
            "location": "centralindia",
            "name": "dev301_nic0",
            "private_ip_address": "192.168.1.5",
            "private_ip_addresses": [
              "192.168.1.5"
            ],
            "resource_group_name": "dev301"
          },
          "dependencies": [
            "module.net.azurerm_public_ip.my_public_ip",
            "module.net.azurerm_resource_group.my_rg",
            "module.net.azurerm_subnet.my_vpc_subnet",
            "module.net.azurerm_virtual_network.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkInterfaces/dev301_nic1",
            "internal_domain_name_suffix": "ddfx1ik1hdxetnfjwp4n4wjtjf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_configuration_1_nicc",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/publicIPAddresses/dev301_pub_ip1",
                "subnet_id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/virtualNetworks/dev301_vpc/subnets/dev301_subnet"
              }
            ],
            "location": "centralindia",
            "name": "dev301_nic1",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "dev301"
          },
          "dependencies": [
            "module.net.azurerm_public_ip.my_public_ip",
            "module.net.azurerm_resource_group.my_rg",
            "module.net.azurerm_subnet.my_vpc_subnet",
            "module.net.azurerm_virtual_network.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "my_nic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkInterfaces/dev301_nic0|/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkSecurityGroups/dev301_nsg",
            "network_interface_id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkInterfaces/dev301_nic0",
            "network_security_group_id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkSecurityGroups/dev301_nsg"
          },
          "dependencies": [
            "module.net.azurerm_network_interface.my_nic",
            "module.net.azurerm_network_security_group.my_nsg",
            "module.net.azurerm_public_ip.my_public_ip",
            "module.net.azurerm_resource_group.my_rg",
            "module.net.azurerm_subnet.my_vpc_subnet",
            "module.net.azurerm_virtual_network.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkInterfaces/dev301_nic1|/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkSecurityGroups/dev301_nsg",
            "network_interface_id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkInterfaces/dev301_nic1",
            "network_security_group_id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkSecurityGroups/dev301_nsg"
          },
          "dependencies": [
            "module.net.azurerm_network_interface.my_nic",
            "module.net.azurerm_network_security_group.my_nsg",
            "module.net.azurerm_public_ip.my_public_ip",
            "module.net.azurerm_resource_group.my_rg",
            "module.net.azurerm_subnet.my_vpc_subnet",
            "module.net.azurerm_virtual_network.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkSecurityGroups/dev301_nsg",
            "location": "centralindia",
            "name": "dev301_nsg",
            "resource_group_name": "dev301",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "my_security_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkSecurityGroups/dev301_nsg/securityRules/Allowed_Port0",
            "name": "Allowed_Port0",
            "network_security_group_name": "dev301_nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dev301",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.azurerm_network_security_group.my_nsg",
            "module.net.azurerm_resource_group.my_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkSecurityGroups/dev301_nsg/securityRules/Allowed_Port1",
            "name": "Allowed_Port1",
            "network_security_group_name": "dev301_nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "dev301",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.azurerm_network_security_group.my_nsg",
            "module.net.azurerm_resource_group.my_rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/networkSecurityGroups/dev301_nsg/securityRules/Allowed_Port2",
            "name": "Allowed_Port2",
            "network_security_group_name": "dev301_nsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "dev301",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.azurerm_network_security_group.my_nsg",
            "module.net.azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/publicIPAddresses/dev301_pub_ip0",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "dev301_pub_ip0",
            "resource_group_name": "dev301",
            "sku": "Basic"
          },
          "dependencies": [
            "module.net.azurerm_resource_group.my_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/publicIPAddresses/dev301_pub_ip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "dev301_pub_ip1",
            "resource_group_name": "dev301",
            "sku": "Basic"
          },
          "dependencies": [
            "module.net.azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/virtualNetworks/dev301_vpc/subnets/dev301_subnet",
            "name": "dev301_subnet",
            "resource_group_name": "dev301",
            "virtual_network_name": "dev301_vpc"
          },
          "dependencies": [
            "module.net.azurerm_resource_group.my_rg",
            "module.net.azurerm_virtual_network.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "a17dcb18-385b-49ee-b4a9-b3fcdf59334d",
            "id": "/subscriptions/b56ee54e-875d-44a4-a2d6-35888803e9e2/resourceGroups/dev301/providers/Microsoft.Network/virtualNetworks/dev301_vpc",
            "location": "centralindia",
            "name": "dev301_vpc",
            "resource_group_name": "dev301",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.net.azurerm_resource_group.my_rg"
          ]
        }
      ]
    }
  ]
}